
  [ Aurelien Jarno ]
  * Build-depends on debian-ports-archive-keyring on architectures
    hosted on debian-ports.org (sh4, sparc64).
  * Increase default UFS size to 40MB.
  * Switch kfreebsd-amd64 and kfreebsd-i386 to 8.1 kernel.
  * Don't try to build unifont.bdf on GNU/kFreeBSD as the console already 
    has basic font support for level 1 and bogl-bterm is not available.

  [ Joey Hess ]
  * Fix build breakage introduced by tighter version parsing in
    dpkg 1.15.8. Thanks, Thibaut Girka

 -- Martin Michlmayr <tbm@cyrius.com>  Fri, 23 Jul 2010 09:36:57 +0100

debian-installer (20100722) unstable; urgency=low

  [ Martin Michlmayr ]
  * orion5x: Temporarily remove jffs2-modules and minix-modules from
    the initrd because the image is too large.  This will be fixed
    properly soon when we move to new kernel udebs. Closes: #590010

 -- Otavio Salvador <otavio@debian.org>  Thu, 22 Jul 2010 22:00:09 -0300

debian-installer (20100719) unstable; urgency=low

  [ Theppitak Karoonboonyanan ]
  * Add needed characters for Thai.

  [ Christian Perrier ]
  * Remove Thai from the list of languages only supported with the
    graphical cdebconf frontend.
  * Activate needed characters for Persian

  [ Frans Pop ]
  * sparc: add components needed to load firmware for netboot images.
  * Update pkg-lists for changes in auto-install (1.7). Main benefit is that
    netcfg will no longer get pulled in on images that shouldn't have it.
  * ia64: add support for loading firmware to images. Closes: #572724.
  * Fix building with alternative LOCALUDEBDIR.
  * Ensure glyphs used in the translated right column of localechooser are
    included in images to avoid incomplete display of the languagelist when
    some translations are dropped through DROP_LANG.
  * Drop auto-install from pkg-lists now that it has been integrated in
    the preseed udebs.

  [ Otavio Salvador ]
  * Switch amd64, i386, hppa, powerpc, mipsel, s390, ia64, mips, sparc to
    2.6.32.
