@@ -1,6 +1,6 @@
 MEDIA_TYPE = boot image
 
-TARGET = pkg-lists/kernel-module-udebs $(INITRD) $(KERNEL) $(MINIISO)
+TARGET = pkg-lists/standard-udebs pkg-lists/kernel-module-udebs $(INITRD) $(KERNEL) $(MINIISO)
 EXTRANAME = $(MEDIUM)/
 
 MANIFEST-INITRD = "initrd"
