@@ -7,6 +7,10 @@ SPLASH_PNG=boot/hurd/pics/klowner-hurd.png
 # The font to load in GRUB
 GRUB_FONT=/usr/share/grub/ascii.pf2
 
+# Library reduction needs some extra stuff which for now
+# is not usually available.
+MKLIBS = mklibs-copy
+
 # Unsupported targets
 arch_boot_screens:
 arch_tree:
