@@ -1,0 +1,18 @@
+# These are broken and/or irrelevant on Hurd for now
+clock-setup -
+partman-auto-raid -
+partman-ext3 -
+partman-jfs -
+partman-md -
+partman-xfs -
+partman-btrfs -
+# FIXME: ufsutils-udeb is uninstallable
+partman-ufs -
+rescue-mode -
+libbsd0-udeb -
+rdate-udeb -
+tzsetup-udeb -
+
+# Use netcfg-static for now
+netcfg -
+netcfg-static
