@@ -1,33 +1,9 @@
-kernel-image-${kernel:Version}
+# These are irrelevant on GNU/kFreeBSD for now
+partman-btrfs -
+partman-ext3 -
+partman-jfs -
 
-kldutils-udeb
-
-# standard udebs
-apt-setup-udeb
-base-installer
-bootstrap-base
-clock-setup
-#di-utils-mapdevfs
-finish-install
-#grub-installer
-hw-detect -
-installation-locale
-#kickseed-common
-#libpcre3-udeb
-nano-udeb
-network-preseed
-#nobootloader
-partman-auto
-#partman-auto-raid
-partman-basicfilesystems
-#partman-ext3
-#partman-jfs
-#partman-md
-#partman-reiserfs
-partman-target
-partman-ufs
-#partman-xfs
-pkgsel
-save-logs
-tzsetup-udeb
-user-setup-udeb
+# These are broken on GNU/kFreeBSD for now
+partman-auto-raid -
+partman-md -
+partman-xfs -
