@@ -20,10 +20,22 @@ debian-installer (201007xx) UNRELEASED; urgency=low
   * Switch kfreebsd-amd64 and kfreebsd-i386 to 8.1 kernel.
   * Don't try to build unifont.bdf on GNU/kFreeBSD as the console already 
     has basic font support for level 1 and bogl-bterm is not available.
+  * Build-depends on xorriso on kfreebsd-amd64, kfreebsd-i386 and hurd-i386.
 
   [ Joey Hess ]
   * Fix build breakage introduced by tighter version parsing in
     dpkg 1.15.8. Thanks, Thibaut Girka
+
+  [ Samuel Thibault ]
+  * Add pkg-lists/standard-udebs to kfreebsd and hurd's monolithic.cfg
+    TARGETS.
+
+  [ Jeremie Koenig ]
+  * Use mklibs-copy on hurd-i386 for the time being.
+  * Disable the uninstallable or otherwise broken standard udebs from the
+    monolithic hurd-i386 images.
+  * Add /lib/ld.so and /servers/exec to hurd-i386 initrd's.
+  * Include a BDF font on Hurd images.
 
  -- Martin Michlmayr <tbm@cyrius.com>  Fri, 23 Jul 2010 09:36:57 +0100
 
